--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,15 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.center {
+  @apply place-items-center justify-center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.flex-center {
+  @apply flex justify-center place-items-center;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.flex-col-center {
+  @apply flex flex-col justify-center place-items-center;
 }
